--- a/Web Workshop [College LAB]/CSS_Selectors/CSS_selector_example.html
+++ b/Web Workshop [College LAB]/CSS_Selectors/CSS_selector_example.html
@@ -11,7 +11,7 @@
             color: blue;
         }
 
-        #id1 {
+        #id1, #id2 {
             color: green;
         }
     </style>
@@ -24,6 +24,10 @@
     <p id="id1">This is a paragraph with id1</p>
 
     <h1>This is a heading</h1>
+
+    <div id="id2">
+        <p>This is a paragraph inside a div with class id2</p>
+    </div>
 </body>
     
 </html>
