--- a/Web Workshop [College LAB]/Exp1/css_internal_example.html
+++ b/Web Workshop [College LAB]/Exp1/css_internal_example.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-
     <title>Resume</title>
     <style>
         body {
@@ -29,6 +28,12 @@
         .header h1 {
             margin: 0;
         }
+        .header img {
+            width: 150px;
+            height: auto;
+            border-radius: 50%;
+            margin-bottom: 10px;
+        }
         .section h2 {
             border-bottom: 2px solid #333;
             padding-bottom: 5px;
@@ -47,6 +52,7 @@
 <body>
     <div class="container">
         <div class="header">
+            <img src="https://github.com/NyanAditya/Web-Development/blob/main/Web%20Workshop%20%5BCollege%20LAB%5D/Exp1/Passport%20Profesional.jpg" alt="Aditya Singh">
             <h1>Aditya Singh</h1>
             <p>Student</p>
         </div>
