Refactor image source in CSS internal example

--- a/Web Workshop [College LAB]/Exp1/css_internal_example.html
+++ b/Web Workshop [College LAB]/Exp1/css_internal_example.html
@@ -52,7 +52,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="https://github.com/NyanAditya/Web-Development/blob/main/Web%20Workshop%20%5BCollege%20LAB%5D/Exp1/Passport%20Profesional.jpg" alt="Aditya Singh">
+            <img src="my.jpg" alt="Aditya Singh">
             <h1>Aditya Singh</h1>
             <p>Student</p>
         </div>
