--- a/Web Workshop [College LAB]/Exp1/html_page_struct.html
+++ b/Web Workshop [College LAB]/Exp1/html_page_struct.html
@@ -12,5 +12,19 @@
     <h2>This is a Heading</h2>
     <p>This is a paragraph.</p>
     <p>This is another paragraph.</p>
+
+    <table>
+      <tr>
+        <th>Header 1</th>
+        <th>Header 2</th>
+      </tr>
+      <tr>
+        <td>row 1, cell 1</td>
+        <td>row 1, cell 2</td>
+      </tr>
+      <tr>
+        <td>row 2, cell 1</td>
+        <td>row 2, cell 2</td>
+      </tr>
   </body>
 </html>
