Refactor CSS selectors and add new styles in CSS_selector_example.html

--- a/Web Workshop [College LAB]/CSS_Selectors/CSS_selector_example.html
+++ b/Web Workshop [College LAB]/CSS_Selectors/CSS_selector_example.html
@@ -3,6 +3,12 @@
 <head>
     <title>CSS Selector Example</title>
     <style>
+        * {
+            color: rgb(0, 255, 42);
+            background-color:bisque;
+            bor
+        }
+
         .class1 {
             color: red;
         }
@@ -13,6 +19,10 @@
 
         #id1, #id2 {
             color: green;
+        }
+
+        .class3 {
+            color: rgb(201, 43, 188);
         }
     </style>
 </head>
@@ -26,8 +36,15 @@
     <h1>This is a heading</h1>
 
     <div id="id2">
-        <p>This is a paragraph inside a div with class id2</p>
+        This is a paragraph inside a div with class id2
     </div>
+
+    <span class="class3">
+        <p>This is a span container with class3</p>
+    </span>
+
+
+
 </body>
     
 </html>
